--- a/classes/cluster/mcp-offline/infra/aptly.yml
+++ b/classes/cluster/mcp-offline/infra/aptly.yml
@@ -33,7 +33,7 @@ classes:
 - cluster.mcp-offline.infra
 parameters:
   _param:
-    apt_mk_version: "2017.12"
+    apt_mk_version: '2017.12'
     aptly_gpg_keypair_id: A8272E04
     aptly_gpg_passphrase: ""
     aptly_server_secure: true
@@ -181,7 +181,8 @@ parameters:
         mirantis_openstack_trusty_cassandra:
           publisher:
             distributions:
-            - ubuntu-trusty/cassandra/stable/
+            - ubuntu-trusty/cassandra/${_param:apt_mk_version}
+            - ubuntu-trusty/cassandra/stable
         mirantis_openstack_trusty_extra:
           publisher:
             distributions:
@@ -221,6 +222,7 @@ parameters:
             distributions:
             - ubuntu-xenial/stable
         mirantis_openstack_xenial_glusterfs:
+          components: '3.12'
           publisher:
             distributions:
             - ubuntu-xenial/glusterfs/stable
