Add debmirror package

--- a/classes/cluster/mcp-offline/infra/aptly.yml
+++ b/classes/cluster/mcp-offline/infra/aptly.yml
@@ -451,6 +451,8 @@ parameters:
       package:
         cloud-init:
           version: latest
+        debmirror:
+          version: latest
     network:
       host:
         apt:
