--- a/init.yml
+++ b/init.yml
@@ -210,6 +210,12 @@ parameters:
             distributions:
             - ubuntu-xenial/docker/stable
         mirantis_openstack_xenial_docker_legacy:
+          source: https://mirror.mirantis.com/${_param:apt_mk_version}/docker-1.x/
+          distribution: ubuntu-xenial
+          components: main
+          architectures: amd64
+          gpgkeys:
+            - 58118E89F3A912897C070ADBF76221572C52609D
           publisher:
             distributions:
               - ubuntu-xenial/docker/stable
