Preserve password for root

--- a/classes/cluster/mcp-offline/infra/init.yml
+++ b/classes/cluster/mcp-offline/infra/init.yml
@@ -84,3 +84,6 @@ parameters:
       service:
         apt-daily.timer:
           status: dead
+      user:
+        root:
+          password: false
