--- a/classes/cluster/mcp-offline/infra/config.yml
+++ b/classes/cluster/mcp-offline/infra/config.yml
@@ -8,10 +8,13 @@ classes:
 - system.salt.master.api
 - system.reclass.storage.salt
 - cluster.mcp-offline.infra
+- system.linux.system.repo.docker_legacy
+- cluster.mcp-offline.infra.mirror
+
 parameters:
   _param:
     salt_master_base_environment: prd
-    reclass_data_repository: "https://github.com/richardfelkl/mcp-offline-model.git"
+    reclass_data_repository: "https://github.com/Mirantis/mcp-offline-model.git"
     reclass_data_revision: master
     reclass_config_master: ${_param:infra_config_deploy_address}
     single_address: ${_param:infra_config_address}
