Add docker-registry class and bump mirror submodule
Change-Id: Iac7b68c3e6d9e0b8be66406e09aa6b01100812ed

--- a/classes/cluster/mcp-offline/infra/config.yml
+++ b/classes/cluster/mcp-offline/infra/config.yml
@@ -10,6 +10,7 @@ classes:
 - cluster.mcp-offline.infra
 - system.linux.system.repo.docker_legacy
 - cluster.mcp-offline.infra.mirror
+- cluster.mcp-offline.infra.mirror.docker-registry
 
 parameters:
   _param:
