--- a/classes/cluster/mcp-offline/infra/init.yml
+++ b/classes/cluster/mcp-offline/infra/init.yml
@@ -7,7 +7,7 @@ parameters:
     # Don't set it "false" before you configure sudo policies and enable power users.
     # linux_system_user_sudo: true
     docker_compose_image: apt:5000/compose:1.8.0
-    apt_mk_version: "testing"
+    apt_mk_version: "2018.3.1"
     aptly_server_hostname: apt
     aptly_server_address: 10.1.0.14
     linux_repo_refresh_db: true
